syntax = "proto3";

package volnix.ident.v1;

option go_package = "github.com/volnix-protocol/volnix-protocol/proto/gen/go/volnix/ident/v1;identv1";

import "volnix/ident/v1/types.proto";

// GenesisState defines the ident module's genesis state.
message GenesisState {
  Params params = 1;
  repeated VerifiedAccount verified_accounts = 2;
  repeated IdentityVerification identity_verifications = 3;
  repeated RoleMigration role_migrations = 4;
  repeated VerificationProvider verification_providers = 5;
  repeated ZKPProof zkp_proofs = 6;
}



